// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`VidSrc Black Mirror 1`] = `
[
  {
    "format": "hls",
    "label": "CloudStream Pro",
    "meta": {
      "extractorId": "vidsrc",
      "height": 1040,
      "title": "Black Mirror (2011) S04E02",
    },
    "ttl": 10800000,
    "url": "https://tmstr1.cloudnestra.com/pl/H4sIAAAAAAAAAw3N7VbCIBgA4FviY5vWP40xm4FnCC8b_0A8rWCeHWdlXn09N_BUeLUqaOXD6lxGhHDAp2pdocpHX6x95Z8DH48dzEZMjsnLgPTkGm1GHwnOkOUj1su3rw2NAOxIWqkJHgziXu8UOdSRaWoKs4Or223u0CzFkdTlicxfA7RvblLQJUE8l7.KuYejuT.AUh2MyObxN5ABe_RTntOadClry_gyJFzKlF8ChTnQbR8fvDafMlkT94KOKPZqEHxbC5adY20yGNrOwk0hKDT7H.mG7pHABxaF5mpW4AZ_kcmb91LY24dJnDmCW5uW6562TZggH.39VWZQ0Mw0WHF1k3MOYm80evoDPLBbNkEBAAA-/master.m3u8",
  },
]
`;

exports[`VidSrc Full Metal Jacket 1`] = `
[
  {
    "format": "hls",
    "label": "CloudStream Pro",
    "meta": {
      "extractorId": "vidsrc",
      "height": 1072,
      "title": "Full Metal Jacket (1987)",
    },
    "ttl": 10800000,
    "url": "https://tmstr4.cloudnestra.com/pl/H4sIAAAAAAAAAw3NWXaCMBQA0C1BMB7pb2UQm0cNGeD9JaBGCUgrVerq27uBG502m1Vs2tgYak0UdKFZtSY40fWJBPR4fOuGhWPNXw2hVF53C_P.3l1m0Ck8mZwHJvsHEDdoSYUV55DnPGe916XiOynnXxSY2NoT0RefZdbVZTJ9cM0PVQ6hUilXQRvZ6zkUUhWMgDERahDF3m5VU9Vw6bxaNUH8gyMiU4VTNX6LRH0d.okcXsXabKFmHgebuScQBQ1BColajC8kZs7b3rujvj2rCG8NWUy1TXMtYLTphCpJwSTQyNo51H4vCNzR875MlpvJ5pmN3v0_71zHArV7NCNgl0.cZ.CNphxfQfwHXU._AEEBAAA-/master.m3u8",
  },
]
`;
